<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calendarEditActivity"
    android:orientation="vertical"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@drawable/border_black"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/what"
            android:textColor="@color/primary"
            android:fontFamily="@font/adamina"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/what"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adamina"
            android:text="@string/what_"
            android:textColor="@color/text"
            android:textSize="25sp"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/border_black">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adamina"
            android:text="@string/where"
            android:paddingStart="10dp"
            android:textColor="@color/primary"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/where_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adamina"
            android:text="@string/where_"
            android:textColor="@color/text"
            android:textSize="25sp"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/border_black">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adamina"
            android:text="@string/when_"
            android:paddingStart="10dp"
            android:textColor="@color/primary"
            android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adamina"
            android:text="@string/date"
            android:textColor="@color/primary"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/when_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adamina"
            android:text="@string/when"
            android:textColor="@color/text"
            android:textSize="25sp"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adamina"
                android:text="@string/time"
                android:textColor="@color/primary"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adamina"
                android:text="@string/time_"
                android:textColor="@color/text"
                android:textSize="25sp"
                android:layout_marginEnd="10dp"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/updt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button"
        android:fontFamily="@font/adamina"
        android:text="@string/update"
        android:textSize="25sp" />

</androidx.appcompat.widget.LinearLayoutCompat>