<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Profile">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/baseline_profile_24"
        android:contentDescription="@string/profile_picture" />

    <TextView
        android:id="@+id/myReportTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_reports"
        android:fontFamily="@font/adamina"
        android:textColor="@color/text"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/myUsername"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/username"
        android:textColor="@color/text"
        android:fontFamily="@font/adamina"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/myEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/email"
        android:textColor="@color/text"
        android:fontFamily="@font/adamina"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/myPhone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/phone"
        android:textColor="@color/text"
        android:fontFamily="@font/adamina"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:text="@string/sign_out"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"/>

</androidx.appcompat.widget.LinearLayoutCompat>
