<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpPage"
    android:background="@color/background"
    android:gravity="center_horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/primary">

        <ImageView
            android:id="@+id/backbttn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_ios_24"
            app:tint="@color/tertiary"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/adamina"
            android:text="@string/sign_up"
            android:textColor="@color/tertiary"
            android:textSize="30sp" />

    </RelativeLayout>

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/border"
        android:fontFamily="@font/adamina"
        android:hint="@string/name"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        android:textSize="25sp"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="@font/adamina"
        android:hint="@string/email"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        android:textSize="25sp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/cellnum"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="@font/adamina"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        android:textSize="25sp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="@font/adamina"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        android:textSize="25sp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/confirm_pass"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="@font/adamina"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        android:textSize="25sp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:fontFamily="@font/adamina"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginTop="40dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>