<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="15dp"
    android:layout_margin="15dp"
    android:background="@color/background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_margin="3dp"
        android:background="@drawable/border_primary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:padding="5dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/adamina"
                android:maxLines="1"
                android:text="@string/shop_name"
                android:textAllCaps="true"
                android:textColor="@color/text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/shopName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:fontFamily="@font/adamina"
                android:layout_marginStart="5dp"
                android:text="@string/title"
                android:textColor="@color/text"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:padding="5dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adamina"
                android:text="@string/shop_description_"
                android:textAllCaps="true"
                android:textColor="@color/text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/shopDes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/adamina"
                android:text="@string/description"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:textColor="@color/text"
                android:textSize="20sp" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:padding="5dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adamina"
                android:text="@string/shop_location"
                android:textAllCaps="true"
                android:textColor="@color/text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/shopLoc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/adamina"
                android:layout_marginStart="5dp"
                android:text="@string/where_"
                android:textColor="@color/text"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>