<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".adminResponse"
    android:background="@color/background">

    <TextView
        android:id="@+id/response"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/reason_of_rejection"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/barangayResponseEditText"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:background="@drawable/border_black"
        android:textSize="25sp"
        android:textColor="@color/text"
        android:inputType="textMultiLine"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity="top|start"
        android:hint="@string/input_response"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/submitResponseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_response"
        android:textColor="@color/white"
        android:background="@drawable/button"
        android:layout_gravity="center"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:textSize="25sp" />

</androidx.appcompat.widget.LinearLayoutCompat>